added useful service to msgs package

--- a/unitree_legged_msgs/CMakeLists.txt
+++ b/unitree_legged_msgs/CMakeLists.txt
@@ -23,6 +23,16 @@ add_message_files(
   HighState.msg
 )
 
+add_service_files(
+  FILES
+  GetBatteryState.srv
+  GetFloat.srv
+  GetInt.srv
+  SetBodyOrientation.srv
+  SetFloat.srv
+  SetInt.srv
+)
+
 generate_messages(
   DEPENDENCIES
   std_msgs
