--- a/unitree_legged_real/package.xml
+++ b/unitree_legged_real/package.xml
@@ -8,13 +8,12 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
   <depend>unitree_legged_msgs</depend>
+  <depend>tf2_ros</depend>
   <depend>eigen</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>roscpp</depend>
+  <depend>std_srvs</depend>
 
 </package>
